feat: Implement character listing and filtering features
- Added CardList component to display a list of characters.
- Created CardSkeleton and CardSkeletonList for loading states.
- Implemented Filter component for character status, species, and gender filtering.
- Developed Pagination component for navigating through character pages.
- Introduced Searcher component for searching characters by name.
- Added loading states for character detail and main character page.
- Created character detail page with loading skeletons.
- Integrated API calls for fetching characters and filtering based on search parameters.
- Removed outdated authentication API routes and refactored auth store.
- Updated layout to include new AuthHeaderWrapper for user session management.
- Enhanced type definitions for characters and API responses.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,12 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/shared/components/*": ["./src/shared/components/*"],
+      "@/shared/types/*": ["./src/shared/types/*"],
+      "@/lib/dal/*": ["./src/lib/dal/*"],
+      "@/store/*": ["./src/store/*"],
+      "@/app/(auth)/_actions/*": ["./src/app/(auth)/_actions/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
